<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RemoteView Notification</string>
    <string name="title_activity_main">Notification Demo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="tool_wifi">Wi-Fi</string>
    <string name="tool_gprs">GPRS</string>
    <string name="tool_ringer">Ringer</string>
    <string name="tool_glim">Glim</string>
    <string name="tool_set">Setting</string>
    <string name="tool_quick">Quick</string>

    <!-- Quick dialog -->
    <string name="quick_total_release">100M</string>
    <string name="quick_shorttext">has been released!</string>
    <string name="quick_longtext">ZERO Boost! Your phone runs fast. Want even faster? Click few more times!</string>

</resources>
