<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="100.0dip"
    android:layout_width="fill_parent"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:background="@drawable/tool_selector"
        android:id="@id/tool_layout1"
        android:layout_height="fill_parent"
        android:layout_weight="1.0"
        android:layout_width="0.0dip"
        android:orientation="vertical">

        <ImageView
            android:id="@id/imagewifi"
            android:layout_gravity="center_horizontal"
            android:layout_height="32.0dip"
            android:layout_marginTop="7.0dip"
            android:layout_width="32.0dip"
            android:scaleType="fitXY"
            android:src="@drawable/wifi"/>

        <TextView
            android:id="@id/textwifi"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3.0dip"
            android:layout_marginTop="2.0dip"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:textColor="@color/tool_text"
            android:text="@string/tool_wifi"
            android:textSize="11.0sp"/>
    </LinearLayout>

    <LinearLayout
        android:background="@drawable/tool_selector"
        android:id="@id/tool_layout2"
        android:layout_height="fill_parent"
        android:layout_weight="1.0"
        android:layout_width="0.0dip"
        android:orientation="vertical">

        <ImageView
            android:id="@id/imagegprs"
            android:layout_gravity="center_horizontal"
            android:layout_height="32.0dip"
            android:layout_marginTop="7.0dip"
            android:layout_width="32.0dip"
            android:scaleType="fitXY"
            android:src="@drawable/gprs"/>

        <TextView
            android:id="@id/textgprs"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginTop="2.0dip"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:textColor="@color/tool_text"
            android:text="@string/tool_gprs"
            android:textSize="11.0sp"/>
    </LinearLayout>

    <LinearLayout
        android:background="@drawable/tool_selector"
        android:id="@id/tool_layout3"
        android:layout_height="fill_parent"
        android:layout_weight="1.0"
        android:layout_width="0.0dip"
        android:orientation="vertical">

        <ImageView
            android:id="@id/imageringer"
            android:layout_gravity="center_horizontal"
            android:layout_height="32.0dip"
            android:layout_marginTop="7.0dip"
            android:layout_width="32.0dip"
            android:scaleType="fitXY"
            android:src="@drawable/ringer_on"/>

        <TextView
            android:id="@id/textringer"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginTop="2.0dip"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:textColor="@color/tool_text"
            android:text="@string/tool_ringer"
            android:textSize="11.0sp"/>
    </LinearLayout>

    <LinearLayout
        android:background="@drawable/tool_selector"
        android:id="@id/tool_layout4"
        android:layout_height="fill_parent"
        android:layout_weight="1.0"
        android:layout_width="0.0dip"
        android:orientation="vertical">

        <ImageView
            android:id="@id/imageglim"
            android:layout_gravity="center_horizontal"
            android:layout_height="32.0dip"
            android:layout_marginTop="7.0dip"
            android:layout_width="32.0dip"
            android:scaleType="fitXY"
            android:src="@drawable/glim"/>

        <TextView
            android:id="@id/textglim"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginTop="2.0dip"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:textColor="@color/tool_text"
            android:text="@string/tool_glim"
            android:textSize="11.0sp"/>
    </LinearLayout>

    <LinearLayout
        android:background="@drawable/tool_selector"
        android:id="@id/tool_layout5"
        android:layout_height="fill_parent"
        android:layout_weight="1.1"
        android:layout_width="0.0dip"
        android:orientation="vertical">

        <ImageView
            android:id="@id/imageset"
            android:layout_gravity="center_horizontal"
            android:layout_height="32.0dip"
            android:layout_marginTop="7.0dip"
            android:layout_width="32.0dip"
            android:scaleType="center"
            android:src="@drawable/set"/>

        <TextView
            android:id="@id/tool_text"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginTop="2.0dip"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@string/tool_set"
            android:textColor="@color/tool_text"
            android:textSize="11.0sp"/>
    </LinearLayout>

    <LinearLayout
        android:background="@drawable/tool_selector"
        android:id="@id/tool_layout6"
        android:layout_height="fill_parent"
        android:layout_weight="1.0"
        android:layout_width="0.0dip"
        android:orientation="vertical">

        <ImageView
            android:id="@id/imagequick"
            android:layout_gravity="center_horizontal"
            android:layout_height="32.0dip"
            android:layout_marginTop="7.0dip"
            android:layout_width="32.0dip"
            android:scaleType="fitXY"
            android:src="@drawable/quick"/>

        <TextView
            android:id="@id/textquick"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginTop="2.0dip"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@string/tool_quick"
            android:textColor="@color/tool_text"
            android:textSize="11.0sp"/>
    </LinearLayout>
</LinearLayout>

